[package]
name = "iota-grpc-client"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
async-stream.workspace = true
base64.workspace = true
futures.workspace = true
http.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true

# internal dependencies
iota-grpc-types.workspace = true
iota-sdk-types.workspace = true

[features]
default = ["tls-ring", "tls-native-roots"]
tls-ring = ["tonic/tls-ring"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
