[package]
name = "iota-grpc-types"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
serde.workspace = true

# internal dependencies
iota-types.workspace = true
