[package]
name = "iota-http"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
bytes.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "http2"] }
hyper-util.workspace = true
pin-project-lite.workspace = true
socket2 = { version = "0.5", features = ["all"] }
tokio = { workspace = true, features = ["macros"] }
tokio-rustls.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true

# internal dependencies
# TLS support
iota-tls.workspace = true

[dev-dependencies]
axum.workspace = true
reqwest.workspace = true

[lints]
workspace = true
