[package]
name = "iota-indexer-streaming"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
backoff.workspace = true
futures.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-postgres = "0.7.15"
tokio-stream.workspace = true
tracing.workspace = true

# internal dependencies
iota-indexer.workspace = true
iota-types.workspace = true

[lints]
workspace = true
