[package]
name = "iota-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
cached.workspace = true
chrono.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["postgres", "postgres_backend"] }
diesel_migrations = "2.0.0"
downcast = "0.11.0"
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
rayon.workspace = true
regex.workspace = true
secrecy = "0.8.0"
serde.workspace = true
serde_with.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
url.workspace = true

# internal dependencies
bin-version.workspace = true
iota-data-ingestion-core.workspace = true
iota-json.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-mainnet-unlocks.workspace = true
iota-metrics.workspace = true
iota-open-rpc.workspace = true
iota-package-resolver.workspace = true
iota-protocol-config.workspace = true
iota-rest-api.workspace = true
iota-sdk.workspace = true
iota-transaction-builder.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true

[features]
pg_integration = []
shared_test_runtime = []

[dev-dependencies]
# external dependencies
serde_json.workspace = true

# internal dependencies
iota-config.workspace = true
iota-keys.workspace = true
iota-move-build.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
simulacrum.workspace = true
test-cluster.workspace = true

[[bin]]
name = "iota-indexer"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
development = ["simulacrum"]
