[package]
name = "iota-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
bytes.workspace = true
cached.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
dashmap.workspace = true
diesel = { workspace = true, features = ["chrono", "r2d2", "serde_json", "postgres"] }
diesel_migrations = "2.2.0"
downcast.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
moka.workspace = true
object_store.workspace = true
prometheus.workspace = true
rand = { workspace = true, optional = true }
reqwest.workspace = true
secrecy = "0.8.0"
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing.workspace = true
url.workspace = true

# internal dependencies
bin-version.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-grpc-client.workspace = true
iota-grpc-server.workspace = true
iota-grpc-types.workspace = true
iota-json.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-mainnet-unlocks.workspace = true
iota-metrics.workspace = true
iota-names.workspace = true
iota-open-rpc.workspace = true
iota-package-resolver.workspace = true
iota-protocol-config.workspace = true
iota-storage.workspace = true
iota-transaction-builder.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true

[features]
pg_integration = ["dep:rand"]
shared_test_runtime = ["dep:rand"]

[dev-dependencies]
# external dependencies
hex.workspace = true
rand.workspace = true
serde_json.workspace = true

# internal dependencies
iota-config.workspace = true
iota-keys.workspace = true
iota-move-build.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
simulacrum.workspace = true
simulacrum-server.workspace = true
test-cluster.workspace = true

[[bin]]
name = "iota-indexer"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
development = ["simulacrum", "simulacrum-server"]

[lints]
workspace = true
