[package]
name = "iota-json-rpc"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
cached.workspace = true
chrono.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
futures.workspace = true
http-body.workspace = true
hyper.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
signature.workspace = true
statrs = "0.17.1"
tap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

# internal dependencies
iota-config.workspace = true
iota-core.workspace = true
iota-json.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-mainnet-unlocks.workspace = true
iota-metrics.workspace = true
iota-names.workspace = true
iota-open-rpc.workspace = true
iota-package-resolver.workspace = true
iota-protocol-config.workspace = true
iota-sdk-types.workspace = true
iota-storage.workspace = true
iota-transaction-builder.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
typed-store.workspace = true

[dev-dependencies]
# external dependencies
expect-test.workspace = true
mockall.workspace = true

# internal dependencies
telemetry-subscribers.workspace = true
