[package]
name = "iota-keys"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
bip32.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
slip10_ed25519 = "0.1"
tiny-bip39 = "1.0"
tracing.workspace = true

# internal dependencies
iota-sdk-types.workspace = true
iota-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = [
  "tiny-bip39", # it is used as "bip39"
]

[lints]
workspace = true
