[package]
name = "iota-ledger-signer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
bip32.workspace = true
thiserror.workspace = true
tracing.workspace = true

# internal dependencies
iota-ledger.workspace = true
iota-sdk.workspace = true
shared-crypto.workspace = true

[dev-dependencies]
anyhow.workspace = true
base64.workspace = true
bcs.workspace = true
clap.workspace = true
tokio.workspace = true
