[package]
name = "iota-mainnet-unlocks"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv = "1.3.1"
regex.workspace = true
serde.workspace = true
tempfile.workspace = true
