[package]
name = "iota-move-lsp"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
clap.workspace = true

# internal dependencies
bin-version.workspace = true
iota-move-build.workspace = true
iota-package-management.workspace = true
move-analyzer.workspace = true

[lints]
workspace = true
