[package]
name = "iota-network-stack"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "IOTA's network tooling"

[dependencies]
# external dependencies
anemo.workspace = true
bcs.workspace = true
bytes.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "http1", "http2", "ring", "tls12"] }
hyper-util.workspace = true
idna = "1.1.0"
multiaddr.workspace = true
once_cell.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
snap.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-rustls.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

# internal dependencies
iota-http.workspace = true

[lints]
workspace = true
