[package]
name = "iota-node"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[features]
flamegraph-alloc = ["telemetry-subscribers/flamegraph-alloc"]

[dependencies]
# external dependencies
anemo.workspace = true
anemo-tower.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
base64.workspace = true
bcs.workspace = true
clap.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
futures.workspace = true
humantime.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
tap.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

# internal dependencies
bin-version.workspace = true
iota-archival.workspace = true
iota-common = { workspace = true, features = ["metrics"] }
iota-config.workspace = true
iota-core.workspace = true
iota-grpc-server.workspace = true
iota-http.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-macros.workspace = true
iota-metrics.workspace = true
iota-names.workspace = true
iota-network.workspace = true
iota-network-stack.workspace = true
iota-protocol-config.workspace = true
iota-rest-api.workspace = true
iota-sdk-types.workspace = true
iota-snapshot.workspace = true
iota-storage.workspace = true
iota-tls.workspace = true
iota-types.workspace = true
move-vm-profiler.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

[build-dependencies]
rustc_version_runtime = "0.3"

[target.'cfg(msim)'.dependencies]
iota-simulator.workspace = true
