[package]
name = "iota-proc-macros"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0", features = ["full", "fold", "extra-traits"] }

[target.'cfg(msim)'.dependencies]
msim-macros = { git = "https://github.com/iotaledger/iota-sim.git", branch = "tokio-1.46.1", package = "msim-macros" }
